--- a/ansible/dockerhost.yml
+++ b/ansible/dockerhost.yml
@@ -3,8 +3,9 @@
 - hosts: dockerhosts
   sudo: no
   roles:
+      - base
       - docker
-      - { role: "swarm", tags: ["join"] }
+      - { role: "swarm", tasks: "join" }
   tasks:
     - name: Pull images
       sudo: True
