--- a/ansible/roles/consul/tasks/main.yml
+++ b/ansible/roles/consul/tasks/main.yml
@@ -7,8 +7,8 @@
 - name: Run consul
   sudo: yes
   shell: > 
-        if ! docker ps -a | grep manager ; then
-            docker create --name manager -p 8400:8400 -p 8500:8500 -p 8600:53/udp -h dockerswarm01 progrium/consul -server -bootstrap-expect 1 -ui-dir /ui ;
+        if ! docker ps -a | grep consul ; then
+            docker create --name consul -p 8400:8400 -p 8500:8500 -p 8600:53/udp -h dockerswarm01 progrium/consul -server -bootstrap-expect=1 -ui-dir=/ui ;
         fi
 
 - name: Upstart consul
